# crypto_tracker_api

./: .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: b65cb5c16889_initial_schema.py
src/: config.py  database.py  dependencies.py  main.py
src/auth/: models.py  router.py  schemas.py  service.py
src/crypto_tracker_api/: main.py
src/crypto_tracker_api/models/: price.py
src/crypto_tracker_api/routers/: markets.py  prices.py
src/crypto_tracker_api/services/: markets.py  prices.py
src/crypto_tracker_api/services/exchanges/: __init__.py  base.py  binance.py  bybit.py  coinbase.py  kraken.py  kucoin.py  okx.py
src/markets/: router.py  schemas.py  service.py
src/markets/api/: __init__.py  base.py  binance.py  bybit.py  coinbase.py  kraken.py  kucoin.py  okx.py
src/utils/: import_submodules.py
