[project]
name = "crypto-tracker-api"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexMaysonJr",email = "alex.mayson.jr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "crypto_tracker_api", from = "src"}]
package-mode = false


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
